--- a/styles/style.css
+++ b/styles/style.css
@@ -53,15 +53,11 @@ body {
 
 #header{
     display: flex;
-    flex-direction: column;
+    align-items: center;
     justify-content: space-between;
-    background-image: url("../images/hero.jpg");
-    height: 90vh;
-    width: 100%;
-    background-size: cover;
-    background-position: top 25% right 0;
-    box-shadow: 0 5px 15px 4px rgba(40, 40, 40, 0.1);
+    box-shadow: 0 5px 15px 4px rgba(0, 0, 0, 0.06);
     padding: 20px 80px;
+    background: white;
 }
 
 #navbar{
@@ -73,7 +69,12 @@ body {
 
 #logo{
     display: flex;
-    align-items: center;
+    align-items: flex-start;
+}
+
+.logo{
+    width: 250px;
+    height: 150px;
 }
 
 #logo-text{
